--- a/package.json
+++ b/package.json
@@ -53,13 +53,18 @@
     "lodash": "4.17.15",
     "moment": "2.24.0",
     "ng2-charts": "2.3.0",
+    "ng2-imageupload": "1.4.2",
+    "ng2-pdf-viewer": "5.3.4",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "8.1.0",
     "ngx-cookie-service": "2.2.0",
+    "ngx-toastr": "10.1.0",
+    "pdfjs-dist": "2.1.266",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.16.0",
     "rxjs": "6.5.2",
     "web-animations-js": "2.3.2",
+    "xlsx": "0.15.1",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
